fixes #280 fixed the footer and aligned it properly

--- a/dyobb/style.css
+++ b/dyobb/style.css
@@ -1,7 +1,7 @@
 body {
-		
+
 	}
-	
+
 #header {
 	background-color: #24913c;
 	border-top-right-radius: 5px;
@@ -22,7 +22,7 @@ body {
 	padding-top:20px;
 	}
 #nav.gallery {
-	height: 3782px;
+	height: 3370px;
 	}
 #nav.index {
 	height: 410px;
@@ -49,7 +49,7 @@ body {
 	height:410px;
 	}
 #content.index {
-	height:410;
+	height:410px;
 	}
 div.transbox  {
 	width:680px;
@@ -67,7 +67,7 @@ div.transbox  {
 	background-color: #00c12b;
 	height: auto;
 	}
-	
+
 #footer {
 	float: left;
 	width: 870px;
@@ -79,18 +79,18 @@ div.transbox  {
 	border-bottom-left-radius: 5px;
 	box-shadow: 10px 0px 5px black;
 	}
-	
+
 #wrapper {
 	width: 800px;
 	background-color: black;
 	margin: 0 auto;
 	}
-	
+
 a:link {
 	color: black;
 	text-decoration: none;
-	}	
-	
+	}
+
 a:hover {
 	color: #007d1c;
 	font-weight: bold;
@@ -99,10 +99,3 @@ a:visited {
 	color: black;
 	text-decoration: none;
 	}
-	
-
-	
-	
-	
-	
-	
